Fix overflow of <main> in desktop view, add webkit-styled x- and y- scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap");
-*, body {
+* {
   margin: 0;
   padding: 0;
   font-size: 10px;
   font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+body {
+  width: 100%;
 }
 
 #app {
@@ -32,6 +36,8 @@ button {
 .all-boards {
   flex-grow: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -100,11 +106,23 @@ header .edit-brd-btn {
 
 main {
   background-color: #F4F7FD;
-  display: flex;
-  height: 100%;
-  flex-wrap: nowrap;
   column-gap: 2rem;
   padding: 0 2rem 2rem 2rem;
+  display: flex;
+  flex-grow: 1;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: auto;
+}
+main::-webkit-scrollbar {
+  width: 1rem;
+}
+main::-webkit-scrollbar-track {
+  background-color: #E9EFFA;
+}
+main::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background-color: #828FA3;
 }
 
 .column {
@@ -211,6 +229,9 @@ main.no-brd-chosen p {
 #app.dark main {
   background-color: #20212C;
 }
+#app.dark main::-webkit-scrollbar-track {
+  background-color: #2B2C37;
+}
 #app.dark main .task {
   background-color: #2B2C37;
   box-shadow: none;
@@ -251,6 +272,7 @@ main.no-brd-chosen p {
   padding-top: 3rem;
   border-right: 1px solid #E4EBFA;
   min-height: 100vh;
+  position: relative;
 }
 @media (max-width: 900px) {
   .sidebar {
@@ -333,9 +355,9 @@ main.no-brd-chosen p {
 }
 
 .sidebar-btm-cluster {
-  position: relative;
+  position: absolute;
   z-index: 0;
-  top: 45vh;
+  inset: auto 0 3rem 0;
   padding: 0 3rem;
 }
 
