--- a/src/stylesheets/_all-boards.sass
+++ b/src/stylesheets/_all-boards.sass
@@ -3,6 +3,8 @@
 .all-boards   
     flex-grow: 1
     position: relative
+    display: flex
+    flex-direction: column
 
 header
     padding: 3rem 3rem 3rem 0
@@ -59,11 +61,23 @@ header
 
 main
     background-color: base.$board-background
-    display: flex
-    height: 100%
-    flex-wrap: nowrap
     column-gap: 2rem
     padding: 0 2rem 2rem 2rem
+    display: flex
+    flex-grow: 1
+    max-height: 100vh
+    max-width: 100vw
+    overflow: auto
+
+    &::-webkit-scrollbar   
+        width: 1rem
+
+    &::-webkit-scrollbar-track
+        background-color: base.$add-background
+
+    &::-webkit-scrollbar-thumb
+        border-radius: 1rem
+        background-color: base.$grey
 
 .column
     width: 250px
@@ -147,6 +161,9 @@ main.no-brd-chosen
 
 #app.dark main
     background-color: base.$dark-background-1
+
+    &::-webkit-scrollbar-track
+        background-color: base.$dark-background-2
 
     .task
         background-color: base.$dark-background-2
