--- a/src/stylesheets/_base.sass
+++ b/src/stylesheets/_base.sass
@@ -16,12 +16,15 @@ $dark-background-1: #20212C
 $dark-background-2: #2B2C37
 $dark-outline: #3E3F4E
 
-*, body
+*
     margin: 0
     padding: 0
     font-size: 10px
     font-family: 'Plus Jakarta Sans', sans-serif
-            
+
+body
+    width: 100%
+
 #app
     display: flex
 
